--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.file-extension filter=lfs diff=lfs merge=lfs -text
 *.another-extension filter=lfs diff=lfs merge=lfs -text
+*.dll filter=lfs diff=lfs merge=lfs -text
