--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -1,6 +1,7 @@
 # Create a release with version from Conventional Commits when patch-content/ changes.
 # fix: → PATCH, feat: → MINOR, BREAKING CHANGE / ! → MAJOR (https://www.conventionalcommits.org/)
-# The Build patch workflow then attaches the zip to this release.
+# Writes manifest.json to repo root so the launcher can use the GitHub archive (no .zip needed).
+# The Build patch workflow also attaches a .zip to the release if present.
 
 name: Auto release on patch change
 
@@ -20,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Determine version bump from commits
         id: bump
@@ -61,6 +63,19 @@ jobs:
           echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "tag=v$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
+
+      - name: Generate manifest.json at repo root
+        run: |
+          node scripts/generate-manifest.js patch-content
+          cat manifest.json
+
+      - name: Commit and push manifest.json
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add manifest.json
+          git diff --staged --quiet || git commit -m "chore: update manifest for release"
+          git push
 
       - name: Generate patch notes from commits
         id: notes
